force-app/main/default/objects/Contract/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <description>Security bond / deposit amount held for the duration of the tenancy.</description>
    <label>Security Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>