force-app/main/default/objects/Contract/fields/Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Amount__c</fullName>
    <description>The agreed rent amount per payment period as specified in this contract.</description>
    <label>Rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>