force-app/main/default/objects/Contract/fields/Rent_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rent_Frequency__c</fullName>
    <description>How often rent is payable under this contract.</description>
    <label>Rent Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>