force-app/main/default/objects/Contract/fields/Special_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Special_Conditions__c</fullName>
    <description>Any special terms or conditions agreed between the landlord and tenant beyond the standard agreement clauses.</description>
    <label>Special Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>