force-app/main/default/objects/Contract/fields/Tenancy__c.field-meta.xml
<CustomField>
    <fullName>Tenancy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The tenancy agreement this contract governs. Links the contract directly to the room, property, and tenant via the Tenancy record.</description>
    <label>Tenancy</label>
    <referenceTo>Tenancy__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>