force-app/main/default/objects/Contract/fields/Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>Void_Reason__c</fullName>
    <description>Reason the contract has been voided or violated. Setting this field triggers automatic tenancy termination and tenant notification.</description>
    <label>Void / Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breach of Contract</fullName>
            </value>
            <value>
                <fullName>Non-Payment of Rent</fullName>
            </value>
            <value>
                <fullName>Property Damage</fullName>
            </value>
            <value>
                <fullName>Abandonment</fullName>
            </value>
            <value>
                <fullName>Illegal Activity</fullName>
            </value>
            <value>
                <fullName>Mutual Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>