force-app/main/default/objects/Contract/recordTypes/Rental_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Rental_Agreement</fullName>
    <active>true</active>
    <description>Rental tenancy agreement contract between a landlord (Account) and a tenant (Contact). Governs the terms of occupation for a specific property room.</description>
    <label>Rental Agreement</label>
</RecordType>