force-app/main/default/objects/Contract/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <description>Contract end date must be after the start date.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(StartDate)),
    NOT(ISBLANK(EndDate)),
    EndDate &lt;= StartDate
)</errorConditionFormula>
    <errorMessage>End Date must be after Start Date.</errorMessage>
    <errorDisplayField>EndDate</errorDisplayField>
</ValidationRule>