force-app/main/default/objects/Contract/validationRules/Rent_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Rent_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Rent amount must be a positive value.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Rent_Amount__c)),
    Rent_Amount__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Rent Amount must be greater than zero.</errorMessage>
    <errorDisplayField>Rent_Amount__c</errorDisplayField>
</ValidationRule>